--- a/styles.css
+++ b/styles.css
@@ -27,6 +27,30 @@
   height: 100px;
 }
 
+.button-add-entry {
+  border: solid;
+  border-radius: 4px;
+  padding: 5px 40px;
+  background-color: #d8e2dc;
+}
+
+.modal-outer {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  background-color: rgba(0, 0, 0, 0.75);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.modal-content {
+  background-color: white;
+  padding: 10px 100px;
+}
+
 /* .text-align-center {
   text-align: center;
 } */
