--- a/styles.css
+++ b/styles.css
@@ -84,3 +84,12 @@ body {
   border-radius: 3px;
   width: 7rem;
 }
+
+table {
+  border: solid;
+  width: 1000px;
+}
+
+th {
+  text-align: start;
+}
