--- a/styles.css
+++ b/styles.css
@@ -85,11 +85,39 @@ body {
   width: 7rem;
 }
 
+tr {
+  border-left: 2px red;
+}
+
 table {
   border: solid;
   width: 1000px;
+  border-collapse: collapse;
 }
 
 th {
   text-align: start;
+  border: 1px solid black;
 }
+
+thead {
+  background-color: darkgray;
+}
+
+td,
+th {
+  border: 1px solid black;
+  padding: 5px;
+}
+
+tbody > tr:nth-child(odd) {
+  background-color: #eee;
+}
+
+/* tr > td:first-child {
+  border-right: 1px solid black;
+} */
+
+/* tr > th:first-child {
+
+} */
